deactivate deep sleep

--- a/config/splitkb_aurora_lily58.conf
+++ b/config/splitkb_aurora_lily58.conf
@@ -8,10 +8,10 @@
 CONFIG_ZMK_KEYBOARD_NAME="AL58"
 
 # enable deep sleep (15m)
-CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+# CONFIG_ZMK_SLEEP=y
+# CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 # report battery every 16 minutes, a bit more than the sleep timeout to avoid waking up macOS
-CONFIG_ZMK_BATTERY_REPORT_INTERVAL=960
+# CONFIG_ZMK_BATTERY_REPORT_INTERVAL=960
 
 # enable split keyboard battery level reporting
 # CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
