--- a/build.yaml
+++ b/build.yaml
@@ -24,3 +24,10 @@ include:
     shield: splitkb_aurora_lily58_right
   - board: nice_nano_v2
     shield: settings_reset
+
+  - board: nice_nano_v2
+    shield: splitkb_aurora_lily58_peripheral_left
+  - board: nrf52840_mdk_usb_dongle 
+    shield: splitkb_aurora_lily58_dongle
+  - board: nrf52840_mdk_usb_dongle 
+    shield: settings_reset
