--- a/config/boards/shields/splitkb_aurora_lily58/splitkb_aurora_lily58_dongle.conf
+++ b/config/boards/shields/splitkb_aurora_lily58/splitkb_aurora_lily58_dongle.conf
@@ -6,3 +6,6 @@ CONFIG_ZMK_EXT_POWER=y
 
 # Allow multiple peripherals
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
+
+# Polling rate - 2ms = 500hz, 1ms = 1000hz
+CONFIG_USB_HID_POLL_INTERVAL_MS=1
