--- a/config/boards/shields/splitkb_aurora_lily58/splitkb_aurora_lily58_left.conf
+++ b/config/boards/shields/splitkb_aurora_lily58/splitkb_aurora_lily58_left.conf
@@ -2,3 +2,7 @@ CONFIG_ZMK_KEYBOARD_NAME="AL58"
 
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+
+# Eager debouncing
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=0
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
