--- a/config/boards/shields/splitkb_aurora_lily58/splitkb_aurora_lily58_dongle.conf
+++ b/config/boards/shields/splitkb_aurora_lily58/splitkb_aurora_lily58_dongle.conf
@@ -4,8 +4,16 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_SLEEP=n
 CONFIG_ZMK_EXT_POWER=y
 
+# CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+
+# May be needed for win battery notifications
+# CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
+
 # Allow multiple peripherals
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
+
+# CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+# CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 
 # Polling rate - 2ms = 500hz, 1ms = 1000hz
 CONFIG_USB_HID_POLL_INTERVAL_MS=1
