--- a/config/boards/shields/splitkb_aurora_lily58/splitkb_aurora_lily58_dongle.conf
+++ b/config/boards/shields/splitkb_aurora_lily58/splitkb_aurora_lily58_dongle.conf
@@ -12,8 +12,8 @@ CONFIG_ZMK_EXT_POWER=y
 # Allow multiple peripherals
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
 
-# CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
-# CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 
 # Polling rate - 2ms = 500hz, 1ms = 1000hz
 CONFIG_USB_HID_POLL_INTERVAL_MS=1
