add rgbled widget to report battery status

--- a/config/boards/shields/splitkb_aurora_lily58/splitkb_aurora_lily58_dongle.conf
+++ b/config/boards/shields/splitkb_aurora_lily58/splitkb_aurora_lily58_dongle.conf
@@ -12,6 +12,10 @@ CONFIG_ZMK_EXT_POWER=y
 # Allow multiple peripherals
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
 
+# Show peripheral battery level
+CONFIG_RGBLED_WIDGET=y
+CONFIG_RGBLED_WIDGET_BATTERY_SHOW_ONLY_PERIPHERALS=y
+
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 
