--- a/build.yaml
+++ b/build.yaml
@@ -28,6 +28,6 @@ include:
   - board: nice_nano_v2
     shield: splitkb_aurora_lily58_peripheral_left
   - board: nrf52840_mdk_usb_dongle 
-    shield: splitkb_aurora_lily58_dongle
+    shield: splitkb_aurora_lily58_dongle rgbled_adapter
   - board: nrf52840_mdk_usb_dongle 
     shield: settings_reset
