--- a/config/boards/shields/splitkb_aurora_sofle/splitkb_aurora_sofle_dongle.conf
+++ b/config/boards/shields/splitkb_aurora_sofle/splitkb_aurora_sofle_dongle.conf
@@ -1,4 +1,9 @@
-CONFIG_ZMK_KEYBOARD_NAME="DONGLY58"
+CONFIG_ZMK_KEYBOARD_NAME="DONGFLE"
+
+CONFIG_ZMK_POINTING=y
+
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_SLEEP=n
