--- a/config/boards/shields/splitkb_aurora_sofle/splitkb_aurora_sofle_left.conf
+++ b/config/boards/shields/splitkb_aurora_sofle/splitkb_aurora_sofle_left.conf
@@ -1,5 +1,8 @@
 CONFIG_ZMK_KEYBOARD_NAME="NONDONGLEv2"
 
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+
 CONFIG_ZMK_POINTING=y
 
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
