--- a/config/boards/shields/splitkb_aurora_sofle/splitkb_aurora_sofle.dtsi
+++ b/config/boards/shields/splitkb_aurora_sofle/splitkb_aurora_sofle.dtsi
@@ -13,7 +13,6 @@
 };
 
 / {
-
     chosen {
         zephyr,display = &oled;
         zmk,physical-layout = &josefadamcik_sofle_layout;
@@ -37,22 +36,20 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5) RC(4,5) RC(4,6) RC(3,6) RC(3,7) 
         >;
     };
 
-    left_encoder: left_encoder {
+    left_encoder: encoder_left {
         compatible = "alps,ec11";
+        a-gpios = <&pro_micro 16 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+        b-gpios = <&pro_micro 10 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
         steps = <144>;
         status = "disabled";
-
-        a-gpios = <&pro_micro 16 GPIO_PULL_UP>;
-        b-gpios = <&pro_micro 10 GPIO_PULL_UP>;
     };
 
-    right_encoder: right_encoder {
+    right_encoder: encoder_right {
         compatible = "alps,ec11";
+        a-gpios = <&pro_micro 16 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+        b-gpios = <&pro_micro 10 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
         steps = <144>;
         status = "disabled";
-
-        a-gpios = <&pro_micro 16 GPIO_PULL_UP>;
-        b-gpios = <&pro_micro 10 GPIO_PULL_UP>;
     };
 
     sensors: sensors {
