--- a/build.yaml
+++ b/build.yaml
@@ -22,6 +22,8 @@ include:
     shield: settings_reset
   - board: nrf52840_mdk_usb_dongle 
     shield: settings_reset
+  - board: seeeduino_xiao_ble 
+    shield: settings_reset
 
   - board: nice_nano_v2
     shield: splitkb_aurora_lily58_left
