add screen config to sofle dongle and left split

--- a/config/boards/shields/splitkb_aurora_sofle/splitkb_aurora_sofle_peripheral_left.conf
+++ b/config/boards/shields/splitkb_aurora_sofle/splitkb_aurora_sofle_peripheral_left.conf
@@ -12,3 +12,7 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 # Eager debouncing
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=5
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
+
+# Display
+CONFIG_ZMK_DISPLAY=n
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
