--- a/build.yaml
+++ b/build.yaml
@@ -38,11 +38,11 @@ include:
     shield: splitkb_aurora_lily58_dongle rgbled_adapter
 
   - board: nice_nano_v2
-    shield: splitkb_aurora_sofle_left #nice_view_adapter nice_view_gem
+    shield: splitkb_aurora_sofle_left nice_view_adapter nice_view_gem
   - board: nice_nano_v2
     shield: splitkb_aurora_sofle_right nice_view_adapter nice_view_gem
 
   - board: nice_nano_v2
-    shield: splitkb_aurora_sofle_peripheral_left #nice_view_adapter nice_view_gem
+    shield: splitkb_aurora_sofle_peripheral_left nice_view_adapter nice_view_gem
   - board: nrf52840_mdk_usb_dongle 
-    shield: splitkb_aurora_sofle_dongle rgbled_adapter
+    shield: splitkb_aurora_sofle_dongle rgbled_adapter nice_view_adapter nice_view_gem
