--- a/config/boards/shields/splitkb_aurora_sofle/splitkb_aurora_sofle_dongle.conf
+++ b/config/boards/shields/splitkb_aurora_sofle/splitkb_aurora_sofle_dongle.conf
@@ -26,3 +26,7 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 
 # Polling rate - 2ms = 500hz, 1ms = 1000hz
 CONFIG_USB_HID_POLL_INTERVAL_MS=1
+
+# Display
+CONFIG_ZMK_DISPLAY=n
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
