--- a/config/boards/shields/splitkb_aurora_sofle/splitkb_aurora_sofle_left.conf
+++ b/config/boards/shields/splitkb_aurora_sofle/splitkb_aurora_sofle_left.conf
@@ -11,3 +11,7 @@ CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 # Eager debouncing
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=5
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
+
+# Display
+CONFIG_ZMK_DISPLAY=n
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
