--- a/config/boards/shields/splitkb_aurora_sofle/splitkb_aurora_sofle_peripheral_left.conf
+++ b/config/boards/shields/splitkb_aurora_sofle/splitkb_aurora_sofle_peripheral_left.conf
@@ -14,5 +14,5 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=5
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
 
 # Display
-CONFIG_ZMK_DISPLAY=n
+CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
