--- a/config/west.yml
+++ b/config/west.yml
@@ -4,8 +4,10 @@ manifest:
       url-base: https://github.com/zmkfirmware
     - name: caksoylar
       url-base: https://github.com/caksoylar
-    - name: m165437
-      url-base: https://github.com/M165437
+    # - name: m165437
+    #   url-base: https://github.com/M165437
+    - name: mctechnology17
+      url-base: https://github.com/mctechnology17
     # Additional modules containing boards/shields/custom code can be listed here as well
     # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
   projects:
@@ -16,8 +18,11 @@ manifest:
     - name: zmk-rgbled-widget
       remote: caksoylar
       revision: main
-    - name: nice-view-gem 
-      remote: m165437 
+    # - name: nice-view-gem 
+    #   remote: m165437 
+    #   revision: main
+    - name: zmk-nice-oled
+      remote: mctechnology17
       revision: main
     # - name: ncs-playground
     #   url: https://github.com/makerdiary/ncs-playground
